--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -4,6 +4,7 @@ quick create intervals when creating the field
 make sure yearly expire subscriptions will auto renew in the beginning of a new subscription
 does lifetime membership works?
 make a ranking list, look at scorekeepr, nice project :)
+push items into dashboard
 
 == NOTES TO LATER ==
 make a quick way to remove all team penalties
