--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == NOTES TO THIS RELEASE ==
+rename team to team category
 make time on day where users can book subscription
 merge migrations into one file
 quick create intervals when creating the field
