--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -1275,8 +1275,8 @@
         <target>Bøde</target>
       </trans-unit>
       <trans-unit id="320">
-        <source>Create team</source>
-        <target>Opret hold</target>
+        <source>Create schedule</source>
+        <target>Opret skema</target>
       </trans-unit>
       <trans-unit id="321">
         <source>First date</source>
