--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,9 +1,4 @@
 == HOT ==
-push items into dashboard:
-  coming teams
-  played matches
-  coming events
-view bookings at the dashboard
 only one total booking at the time
 turn booking overview has to be a setting
 all names in a booking
@@ -11,6 +6,7 @@ if allowed to change plan, go to plan when clicking on it
 click on a booking plan, might be wrong dates
 
 == NOTES TO THIS RELEASE ==
+is it possible to return in the dependency injector when bundle is disabled?
 fix booking plan period times
 auto complete booking, only active members
 obey rules of book time
