Fixed bug when users cannot delete their own bookings.

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -1750,6 +1750,10 @@
         <source>You have no coming bookings.</source>
         <target>Du har ingen kommende bookinger.</target>
       </trans-unit>
+      <trans-unit id="440">
+        <source>You cannot have more bookings</source>
+        <target>Du kan ikke have flere bookinger</target>
+      </trans-unit>
 
     </body>
   </file>
