--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == HOT ==
+on booking dashboard, also view partner bookings
 only one total booking at the time
 turn booking overview has to be a setting
 all names in a booking
