--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,8 @@
 == HOT ==
+remove shop
+users should be able to view each other, only active membership can view details
+put colors on booking plan
+make that you have to checkin in order to confirm your booking, otherwice it will be free
 obey rules of book time
 turn booking overview has to be a setting
 all names in a booking
