--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == HOT ==
+make confirmed teams, and use confirmed field on team -> user
 remove shop
 users should be able to view each other, only active membership can view details
 put colors on booking plan
