Added location description on plan form.

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -1754,6 +1754,10 @@
         <source>You cannot have more bookings</source>
         <target>Du kan ikke have flere bookinger</target>
       </trans-unit>
+      <trans-unit id="441">
+        <source>Plan category</source>
+        <target>Plan kategori</target>
+      </trans-unit>
 
     </body>
   </file>
