--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == HOT ==
+add fist booking plan on create booking plan category page
 send booking confirm mail
 make confirmed teams, and use confirmed field on team -> user
 remove shop
