Fixed missing booking plans.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == HOT ==
+something is wrong with booking plan
 add fist booking plan on create booking plan category page
 send booking confirm mail
 make confirmed teams, and use confirmed field on team -> user
