--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,5 @@
 == HOT ==
-add fist booking plan on create booking plan category page
+add first booking plan on create booking plan category page
 send booking confirm mail
 make confirmed teams, and use confirmed field on team -> user
 users should be able to view each other, only active membership can view details
