--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,4 @@
 == HOT ==
-add first booking plan on create booking plan category page
 send booking confirm mail
 make confirmed teams, and use confirmed field on team -> user
 users should be able to view each other, only active membership can view details
@@ -12,6 +11,8 @@ make integrations to economic
 make integrations to quickpay
 
 == NOTES TO THIS RELEASE ==
+improve documentation of config file
+add first booking plan on create booking plan category page
 is it possible to return in the dependency injector when bundle is disabled?
 auto complete booking, only active members
 on booking plan, booking overview remember description
