--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -14,6 +14,7 @@ obey rules of game
 add comment to a match
 
 == HOT ==
+should be possible to reply to blog posts on frontpage
 fix mailer, dont build the mail all the times, and only add attachment once
 problems with lagging of log when bad email syntax
 checkup sending mails.. icon is wrong
