--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -15,7 +15,7 @@ obey rules of game
 add comment to a match
 
 == HOT ==
-only show active payment methods, from the plugins
+remove countries, and use country form field
 seems to make problem:
   - create cart not logged in.
   - login to the left, with wrong credentials
