Add order with guest booking user cannot cancel order

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -1826,6 +1826,10 @@
         <source>Comments</source>
         <target>Kommentarer</target>
       </trans-unit>
+      <trans-unit id="459">
+        <source>Players</source>
+        <target>Spillere</target>
+      </trans-unit>
 
     </body>
   </file>
