--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -15,6 +15,7 @@ obey rules of game
 add comment to a match
 
 == HOT ==
+use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
 style quickpay flow
 click on a booking plan, might be wrong dates
 prices to book with guest, use normal checkout procedure
