--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,6 @@
 == HOT ==
+seems like problem with booking, get:
+cannot have more bookings this day with booking today and try to book in 30 days
 user reporting system, export users from a search to CSV
 style quickpay flow
 prices to book with guest, use normal checkout procedure
