--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,5 @@
 == HOT ==
-style quickpay flow
+improve manuel payments, not do stuff like change delivery status
 prices to book with guest, use normal checkout procedure
 make that you have to checkin in order to confirm your booking, otherwice it will be free
 add first booking plan on create booking plan category page
