--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,6 @@
 == HOT ==
+make the amount_left on order
+dynamic currency in cash payment
 check bookings in IE > 6
 improve manuel payments, not do stuff like change delivery status
 prices to book with guest, use normal checkout procedure
