--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -1866,6 +1866,14 @@
         <source>Register payment</source>
         <target>Register betaling</target>
       </trans-unit>
+      <trans-unit id="469">
+        <source>Amount</source>
+        <target>Beløb</target>
+      </trans-unit>
+      <trans-unit id="470">
+        <source>Enter the amount the user has paid, and the system will automatically process the order.</source>
+        <target>Indtast det beløb brugeren har indbetalt, og systemet vil automatisk fortsætte behandlingen af ordren.</target>
+      </trans-unit>
 
     </body>
   </file>
