--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == HOT ==
+search booking plan category as tags, autocomplete
 prices to book with guest, use normal checkout procedure
 make sure yearly expire subscriptions will auto renew in the beginning of a new subscription
 
